--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.13.3",
+    "cheerio": "^0.19.0",
     "compression": "^1.5.2",
     "consolidate": "^0.13.1",
     "cookie-parser": "^1.3.5",
@@ -13,6 +14,7 @@
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "multer": "^1.0.3",
+    "request": "^2.60.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {},
